@startuml DiagramaUML-DetallePreguntas-TP2

skinparam classAttributeIconSize 0

abstract Question{
    - id : long
    - text : String
    - options : List<GameOption>
    # correctOptions : List<GameOption>
    + calculatePoints(options :List<GameOption>, augmenter :ScoreAugmenter) : Score
    + calculatePoints(option :GameOption, augmenter :ScoreAugmenter) : Score
    # {abstract}calculatePoints(options :List<GameOption) : int
    # {abstract}getType() : QuestionType
    # {abstract}hasPenalty() : Boolean
}

class TrueFalseQuestion{
    + calculatePoints(options, augmenter) : int
    + setCorrectOption(GameOption option)
    + hasPenalty() : Boolean
    + getType() : QuestionType
}

class TrueFalseWithPenaltyQuestion{
    + calculatePoints(options, augmenter) : int
    + setCorrectOption(GameOption option)
    + hasPenalty() : Boolean
    + getType() : QuestionType
}

class OrderedChoiceQuestion{
    + calculatePoints(options, augmenter) : int
    + hasPenalty() : Boolean
    + getType() : QuestionType
}

class MultipleChoiceQuestion{
    + calculatePoints(options, augmenter) : int
    + hasPenalty() : Boolean
    + getType() : QuestionType
}

class MultipleChoiceWithPenaltyQuestion{
    + calculatePoints(options, augmenter) : int
    + hasPenalty() : Boolean
    + getType() : QuestionType
}

class GroupChoiceQuestion{
    + calculatePoints(options, augmenter) : int
    - groupList :  List<OptionGroup>
    + hasPenalty() : Boolean
    + getOptionGroupList() : List<OptionGroup> 
    + getType() : QuestionType
}


TrueFalseQuestion --|> Question
TrueFalseWithPenaltyQuestion --|> Question

OrderedChoiceQuestion --left|> Question

MultipleChoiceQuestion --up|> Question
MultipleChoiceWithPenaltyQuestion --up|> Question

GroupChoiceQuestion --right|> Question

@enduml